--- a/src/main/webapp/WEB-INF/views/users/show.html
+++ b/src/main/webapp/WEB-INF/views/users/show.html
@@ -5,8 +5,9 @@
     <title>Users</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+</head>
 <body>
-<h2>Список всех пользователей</h2>
+<h2>Информация о пользователе</h2>
 <table class="table table-dark">
     <thead>
     <tr>
@@ -18,7 +19,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="user: ${users}">
+    <tr>
         <td th:text="${user.getId}"></td>
         <td th:text="${user.getName}"></td>
         <td th:text="${user.getSurname}"></td>
