--- a/src/main/webapp/WEB-INF/views/users/index.html
+++ b/src/main/webapp/WEB-INF/views/users/index.html
@@ -27,5 +27,8 @@
     </tr>
     </tbody>
 </table>
+<form th:method="GET" th:action="@{/users/new}">
+    <input type="submit" value="Create new user"/>
+</form>
 </body>
 </html>
