--- a/src/main/webapp/WEB-INF/views/users/show.html
+++ b/src/main/webapp/WEB-INF/views/users/show.html
@@ -28,5 +28,11 @@
     </tr>
     </tbody>
 </table>
+<form th:method="GET" th:action="@{/users/{id}/edit(id=${user.getId()})}">
+    <input type="submit" value="Update"/>
+</form>
+<form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
+    <input type="submit" value="Delete"/>
+</form>
 </body>
 </html>
