--- a/src/main/webapp/WEB-INF/views/users/new.html
+++ b/src/main/webapp/WEB-INF/views/users/new.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>New user</title>
 </head>
+<h2>Создание нового пользователя</h2>
 <body>
 
 <form th:method="POST" th:action="@{/users}" th:object="${user}">
