--- a/src/main/webapp/WEB-INF/views/users/index.html
+++ b/src/main/webapp/WEB-INF/views/users/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <h2>Список всех пользователей</h2>
-<table class="table table-dark">
+<table class="table">
     <thead>
     <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Имя</th>
-        <th scope="col">Фамилия</th>
-        <th scope="col">Страна</th>
-        <th scope="col">Возраст</th>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Страна</th>
+        <th>Возраст</th>
     </tr>
     </thead>
     <tbody>
@@ -24,6 +24,18 @@
         <td th:text="${user.getSurname}"></td>
         <td th:text="${user.getCountry}"></td>
         <td th:text="${user.getAge}"></td>
+
+        <td>
+            <form th:method="GET" th:action="@{/users/{id}/edit(id=${user.getId()})}">
+                <input type="submit" value="Update"/>
+            </form>
+        </td>
+
+        <td>
+            <form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
     </tr>
     </tbody>
 </table>
