--- a/src/main/webapp/WEB-INF/views/users/show.html
+++ b/src/main/webapp/WEB-INF/views/users/show.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <h2>Информация о пользователе</h2>
-<table class="table table-dark">
+<table class="table">
     <thead>
     <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Имя</th>
-        <th scope="col">Фамилия</th>
-        <th scope="col">Страна</th>
-        <th scope="col">Возраст</th>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Страна</th>
+        <th>Возраст</th>
     </tr>
     </thead>
     <tbody>
