--- a/src/main/webapp/WEB-INF/views/users/edit.html
+++ b/src/main/webapp/WEB-INF/views/users/edit.html
@@ -18,7 +18,7 @@
         <input type="text" th:field="*{country}" id="country"/>
         <br/>
         <label for="age">Enter age: </label>
-        <input type="text" th:field="*{age}" id="age"/>
+        <input type="number" th:field="*{age}" id="age"/>
         <br/>
         <input type="submit" value="Update!"/>
     </div>
