--- a/src/main/webapp/WEB-INF/views/users/new.html
+++ b/src/main/webapp/WEB-INF/views/users/new.html
@@ -9,19 +9,19 @@
 
 <form th:method="POST" th:action="@{/users}" th:object="${user}">
     <div>
-    <label for="name">Enter name: </label>
-    <input type="text" th:field="*{name}" id="name"/>
-    <br/>
-    <label for="surname">Enter surname: </label>
-    <input type="text" th:field="*{surname}" id="surname"/>
-    <br/>
-    <label for="country">Enter city: </label>
-    <input type="text" th:field="*{country}" id="country"/>
-    <br/>
-    <label for="age">Enter age: </label>
-    <input type="text" th:field="*{age}" id="age"/>
-    <br/>
-    <input type="submit" value="Create!"/>
+        <label for="name">Enter name: </label>
+        <input type="text" th:field="*{name}" id="name"/>
+        <br/>
+        <label for="surname">Enter surname: </label>
+        <input type="text" th:field="*{surname}" id="surname"/>
+        <br/>
+        <label for="country">Enter city: </label>
+        <input type="text" th:field="*{country}" id="country"/>
+        <br/>
+        <label for="age">Enter age: </label>
+        <input type="number" th:field="*{age}" id="age" value="0"/>
+        <br/>
+        <input type="submit" value="Create!"/>
     </div>
 </form>
 
