--- a/src/main/webapp/WEB-INF/views/users/index.html
+++ b/src/main/webapp/WEB-INF/views/users/index.html
@@ -10,11 +10,11 @@
 <table class="table">
     <thead>
     <tr>
-        <th>ID</th>
-        <th>Имя</th>
-        <th>Фамилия</th>
-        <th>Страна</th>
-        <th>Возраст</th>
+        <th scope="col">ID</th>
+        <th scope="col">Имя</th>
+        <th scope="col">Фамилия</th>
+        <th scope="col">Страна</th>
+        <th scope="col">Возраст</th>
     </tr>
     </thead>
     <tbody>
